trinistocks/kubernetes/trinistocks-background-scripts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f .\docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: trinistocks-background-scripts
  name: trinistocks-background-scripts
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trinistocks-background-scripts
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f .\docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: trinistocks-background-scripts
    spec:
      containers:
        - args:
            - sh
            - -c
            - bash /trinistocks/scripts/copy_environmental_variables.sh && cron && service postfix start && tail -f /var/log/cron.log
          image: rishi321/trinistocks_background_scripts:latest
          imagePullPolicy: Always
          name: trinistocks-background-scripts
          ports:
            - containerPort: 8001
          resources: { }
          volumeMounts:
            - mountPath: /trinistocks/logs
              name: trinistocks-log-files
      restartPolicy: Always
      volumes:
        - name: trinistocks-log-files
          persistentVolumeClaim:
            claimName: trinistocks-log-files
status: { }
